# DXFJanitors

./: .gitignore  README.md  known_bugs.md
Main/: .gitignore  Cargo.toml  lol.dxf  test.dxf  test1.dxf  test1_dxf_export.dxf  test_dxf_export.dxf  test_export.dxf
Main/src/: algorithms.rs  app.rs  dxfextract.rs  dxfwrite.rs  known_bugs.md  lib.rs  main.rs  main_integrating.rs  main_test.rs  pythontest.py  savedxf.py  svgwrite.rs
Main/tests/: integration_test.rs
