[package]
name = "dxf_janitors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.18.1", features = ["auto-initialize"] }
clap = {version = "3.1.16", features = ["derive"] }
dxf = "0.5.0"
svg = "0.10.0"
log = "0.4.14"
env_logger = "0.9.0"
rfd = "0.11.1"
serde = "1.0.152"
serde_json = "1.0.94"
egui = "0.21.0"
egui_extras = {version = "0.21.0", features = ["svg"]}
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

tokio = { version = "1", features = ["full"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

