[package]
name = "dxf_janitors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.18.1", features = ["auto-initialize"] } #https://pyo3.rs/v0.18.3/
clap = {version = "3.1.16", features = ["derive"] }          #https://docs.rs/clap/latest/clap/
dxf = "0.5.0"                                                #https://docs.rs/dxf/latest/dxf/
svg = "0.10.0"                                               #https://docs.rs/svg/0.13.1/svg/
log = "0.4.14"                                               #https://docs.rs/log/latest/log/
env_logger = "0.9.0"                                         #https://docs.rs/env_logger/latest/env_logger/
rfd = "0.11.1"                                               #https://docs.rs/rfd/latest/rfd/   
serde = "1.0.152"                                            #https://docs.rs/serde/latest/serde/
serde_json = "1.0.94"                                        #https://docs.rs/serde_json/latest/serde_json/
egui = "0.21.0"                                              #https://docs.rs/egui/latest/egui/
egui_extras = {version = "0.21.0", features = ["svg"]}       #https://docs.rs/egui_extras/latest/egui_extras/
tokio = { version = "1", features = ["full"] }               #https://docs.rs/tokio/latest/tokio/
eframe = { version = "0.21.0", default-features = false, features = [   
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }                                                          #https://docs.rs/eframe/latest/eframe/



# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

